# BOUNDARYCAM

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.js  boundary-schema.json  boundarycam-completion.json  boundarycam-manifest.json  boundarycam-whole-stack-integrity.json  docker-compose.yml  index.html  public-control.json  pyproject.toml  robots.txt  sitemap.xml  styles.css
.github/: CODEOWNERS  pull_request_template.md
assets/: social-card.txt
audit/: boundarycam-invocorder-capture-route-audit.md  boundarycam-verifrax-admissibility-route-audit.md  boundarycam-whole-stack-checksums.json
boundarycam_runtime/: admissibility.py  api.py  bundle.py  cli.py  merkle.py  models.py  store.py
data/: boundarycam-live-status.json  examples.json  surfaces.json
docs/: ACCEPTANCE.md  BOUNDARY_MODEL.md  CONTROL_SURFACE.md  FRAME_STATUS.md  INTERACTIVE_CONSOLE.md  LIVE_SURFACE_AUDIT.md  OPERATIONAL_DOCTRINE.md  PRODUCT_CHARTER.md  SECURITY_BOUNDARY.md  STACK_RELATION.md
governance/: GOVERNANCE.md
pages/: about.html  capture.html  frames.html  stack.html
registry/: invocorder-boundarycam-route.json  verifrax-boundarycam-admissibility-route.json
runtime/: run-api.sh
schemas/: boundary-frame.schema.json  boundarycam-completion.schema.json  capture-event.schema.json  invocorder-capture-contract.schema.json  public-control.schema.json  verifrax-admissibility-report.schema.json
security/: SECURITY_BOUNDARY.md
support/: SUPPORT.md
tests/: test_bundle.py  test_runtime.py
tools/: bundle-smoke.sh  (+5 more)
(+23 files in other folders)
