[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boundarycam-runtime"
version = "0.5.0"
description = "Runtime Boundary Frame API, CLI, and hash-chain store for BOUNDARYCAM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "qxvi" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "httpx>=0.27.0"]

[project.scripts]
boundarycam = "boundarycam_runtime.cli:main"

[tool.setuptools.packages.find]
include = ["boundarycam_runtime*"]
